--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <!--CSS-->
-  <link rel="stylesheet" href="/css/styles_variables.css">
-  <link rel="stylesheet" href="/css/styles_main.css">
+  <link rel="stylesheet" href="./css/styles_variables.css">
+  <link rel="stylesheet" href="./css/styles_main.css">
   
   <title>Frontend Mentor | QR code component</title>
 
@@ -18,7 +18,7 @@
   <main>
     <div class="qr-block">
       <div class="container for-image">
-        <img src="/images/image-qr-code.png">
+        <img src="./images/image-qr-code.png">
       </div>
 
       <div class="container for-desc">
