Alt Text for <img>

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <div class="qr-block">
       <div class="container for-image">
-        <img src="./images/image-qr-code.png">
+        <img src="./images/image-qr-code.png" alt="QR code">
       </div>
 
       <div class="container for-desc">
